package edu.vanderbilt.isis.meta;

message AnalysisComponentsType {
	repeated ComponentType Component = 1;
}

message AssembliesType {
	repeated AssemblyType Assembly = 1;
	optional DataExchangeType DataExchange = 2;
	optional UnassembledComponentsType UnassembledComponents = 4;
	repeated AssembliesType Assemblies = 5;
	required string VersionInfo = 6;
}

message AssemblyType {
	optional CADComponentType CADComponent = 2;
	required PropertiesType Properties = 4;
	required string ConfigurationID = 5;
}

message CADComponentType {
	repeated CADComponentType CADComponent = 1;
	optional ParametricParametersType ParametricParameters = 4;
	repeated ConnectorType Connectors = 14;
	repeated ConnectorDatumType Datums = 15;
	optional string ComponentID = 5;
	optional string AvmComponentID = 11;
	optional string MaterialID = 6;
	optional string Name = 7;
	optional string SpecialInstruction = 8;
	optional bool Standalone = 9;
	optional string Type = 10;
	optional string CADModelID = 12;
	optional string DisplayName = 13;
}

message CADParameterType {
	optional UnitsType Units = 1;
	required string Name = 2;
	required string Type = 3;
	required string Value = 4;
}

message ComponentType {
	required string ComponentID = 2;
	required bool InfiniteCycle = 3;
}

message ConnectorDatumType
{
	enum AlignType {
      MATE = 0;
      ALIGN = 1;
    }
	optional AlignType Alignment = 3;
	optional string ID = 1;
	required string DisplayName = 2;
}


message ConnectorType {
	required string ID = 1;
	required string DisplayName = 2;
	repeated ConnectorDatumType Datums = 3;
}

message ConstraintFeatureType {	
	required string ComponentID = 1;
	required string FeatureName = 2;
	required string FeatureOrientationType = 3;
}

message ConstraintOffsetType {
	optional UnitsType Units = 1;
	required string OffsetAlignmentType = 2;
	required double Value = 3;
}

message ConstraintType {
	repeated PairType Pair = 1;
	optional string ComponentID = 2;
}

message DataExchangeType {
	repeated STEPFormatType STEPFormat = 1;
}


message FeatureType {
	required string ComponentID = 1;
	required string Name = 2;
}


message FeaturesType {
	repeated FeatureType Feature = 1;
	required string FeatureGeometryType = 2;
	required string FeatureID = 3;
	required string FeatureInterfaceType = 4;
	required string GeometryType = 5;
	required string PrimaryGeometryQualifier = 6;
	required string SecondaryGeometryQualifier = 7;
}

message GeometryType {
	repeated FeaturesType Features = 1;
}

message PairType {
	required ConstraintFeatureType ConstraintFeatureA = 1;
	required ConstraintFeatureType ConstraintFeatureB = 2;
	optional ConstraintOffsetType ConstraintOffset = 3;
	required string FeatureAlignmentType = 4;
	required string FeatureGeometryType = 5;
	required string FeatureInterfaceType = 6;
}

message ParametricParametersType {
	repeated CADParameterType CADParameter = 1;
	optional string ComponentID = 2;
}

message PropertiesType {
	optional UnitsType Units = 1;
}

message STEPFormatType {
	required string Name = 1;
}

message UnassembledComponentsType {
	repeated CADComponentType CADComponent = 1;
}

message UnitsType {
	required string Value = 1;
}

